--- a/css/only-mw.css
+++ b/css/only-mw.css
@@ -77,6 +77,7 @@
 .Liberty .content-wrapper .liberty-content .liberty-content-main .mw-headline-number {
     color: #4188f1;
 }
+#mw-content-text { clear: both; }
 /* 제목 관련 End */
 
 /* 본문 관련 */
