--- a/css/wiki.css
+++ b/css/wiki.css
@@ -6,13 +6,15 @@ a.new {
     color: #b73333;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus {
     color: #23527c;
     text-decoration: underline;
     transition: 0.3s;
 }
 
-a.new:hover, a.new:focus {
+a.new:hover,
+a.new:focus {
     color: #7c2323;
     text-decoration: underline;
     transition: 0.3s;
@@ -22,7 +24,8 @@ a.external {
     color: #33b733;
 }
 
-a.external:hover, a.external:focus {
+a.external:hover,
+a.external:focus {
     color: #2ca02c;
     text-decoration: underline;
     transition: 0.3s;
@@ -32,14 +35,15 @@ a.external:before {
     font: normal normal normal 14px/1 FontAwesome;
     text-align: center;
     color: #33b733;
-    content: "\f0c1";
+    content: '\f0c1';
 }
 
 .plainlinks a.external {
     color: #337ab7;
 }
 
-.plainlinks a.external:hover, .plainlinks a.external:focus {
+.plainlinks a.external:hover,
+.plainlinks a.external:focus {
     color: #23527c;
     text-decoration: underline;
     transition: 0.3s;
